--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
     "C_Cpp.default.defines": [
         "__AVX2__"
     ],
-    "FSharp.inlayHints.parameterNames": false
+    "FSharp.inlayHints.parameterNames": false,
+    "C_Cpp.default.cStandard": "c89"
 }
