--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,8 @@
         "__AVX2__"
     ],
     "FSharp.inlayHints.parameterNames": false,
-    "C_Cpp.default.cStandard": "c89"
+    "C_Cpp.default.cStandard": "",
+    "C_Cpp.default.includePath": [
+        "${workspaceFolder}/lib/**"
+    ]
 }
